<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@android:color/background_dark">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/default_value_1"
        android:id="@+id/text_1"
        android:layout_toStartOf="@id/copy_1"
        android:layout_alignParentLeft="true"
        android:textColor="@android:color/white"
        android:singleLine="true"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/copy_1"
        android:background="@drawable/ic_stat_content_copy"
        android:layout_alignTop="@+id/text_1"
        android:layout_alignBottom="@+id/text_1"
        android:layout_alignParentRight="true"
        android:longClickable="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/default_value_2"
        android:id="@+id/text_2"
        android:layout_below="@+id/text_1"
        android:layout_toStartOf="@id/copy_2"
        android:layout_alignParentLeft="true"
        android:textColor="@android:color/white"
        android:singleLine="true"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/copy_2"
        android:background="@drawable/ic_stat_content_copy"
        android:layout_alignTop="@+id/text_2"
        android:layout_alignBottom="@+id/text_2"
        android:layout_alignParentRight="true"
        android:longClickable="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/default_value_3"
        android:id="@+id/text_3"
        android:layout_below="@+id/text_2"
        android:layout_toStartOf="@id/copy_3"
        android:layout_alignParentLeft="true"
        android:textColor="@android:color/white"
        android:singleLine="true"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/copy_3"
        android:background="@drawable/ic_stat_content_copy"
        android:layout_alignTop="@+id/text_3"
        android:layout_alignBottom="@+id/text_3"
        android:layout_alignParentRight="true"
        android:longClickable="true"/>
</RelativeLayout>